--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,13 +18,5 @@ code {
 }
 
 html {
-  height: 100%;
-}
-
-#root {
-  height: 100%;
-}
-
-.root {
   height: 100%;
 }
