--- a/src/styles/AstalComponent.css
+++ b/src/styles/AstalComponent.css
@@ -2,9 +2,17 @@
   width: 6rem;
   height: 6rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-items: center;
   border: 1px solid black;
+}
+
+.astal > p {
+  font-weight: bold;
+  text-align: center;
+  margin: 8px 0;
 }
 .astal:hover {
   cursor: pointer;
