--- a/src/styles/SingleAstalView.css
+++ b/src/styles/SingleAstalView.css
@@ -1,20 +1,37 @@
+/* #root {
+  height: 100%;
+}
+
+.root {
+  height: 100%;
+} */
+
 .singleAstal-body-container {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: 0 2rem;
 }
 
 .tipProizvoda {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   border: 1px solid black;
   padding: 10px;
   margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.dodavanje-proizvoda {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .tipProizvoda:hover {
@@ -23,17 +40,71 @@
 }
 
 .proizvod {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   border: 1px solid black;
   padding: 10px;
   margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .proizvod:hover {
   background-color: #f2f2f2;
   cursor: pointer;
+}
+
+.dodavanje-proizvoda-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.articles-list {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 45%;
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+}
+
+.porudzbenica-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 50%;
+  width: 50%;
+  max-height: calc(100vh - 200px);
+  overflow-x: auto;
+  border-left: 1px solid gray;
+  height: 100%;
+  padding: 10px;
+}
+
+.porudzbenica {
+  display: flex;
+  width: auto;
+  justify-content: flex-end;
+}
+
+.porudzbenicaQuantity {
+  padding: 0 5px;
+}
+
+.porudzbenica-total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.porudzbenica-list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 80%;
+  overflow-y: auto;
 }
