--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 .menuButton {
@@ -40,4 +41,28 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+.stolovi-control {
+  display: flex;
+  position: absolute;
+  top: 55px;
+  left: 30px;
+  z-index: 10;
+}
+
+.control-button {
+  border: 1px solid black;
+  width: 100px;
+  height: 60px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: white;
+}
+
+.control-button:hover {
+  background-color: #e6e6e6;
 }
