--- a/src/styles/StoloviView.css
+++ b/src/styles/StoloviView.css
@@ -165,7 +165,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-direction: row-reverse;
-  bottom: 150px;
+  bottom: 0;
 }
 
 
