--- a/src/styles/SingleAstalView.css
+++ b/src/styles/SingleAstalView.css
@@ -16,13 +16,17 @@
 
 .tipProizvoda {
   width: 100px;
-  height: 100px;
+  height: 40px;
   border: 1px solid black;
+  border-radius: 6px;
   padding: 10px;
   margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: break-spaces;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .dodavanje-proizvoda {
@@ -41,14 +45,26 @@
 
 .proizvod {
   width: 100px;
-  height: 100px;
+  height: 80px;
+  max-height: 80px;
+  border-radius: 6px;
   border: 1px solid black;
   padding: 10px;
   margin: 10px;
+  max-width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  white-space: break-spaces;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  box-shadow: 1px 1px 1px 1px #ccc;
+  box-sizing: unset;
+}
+
+.proizvodTitle {
+  font-weight: 600;
 }
 
 .proizvod:hover {
@@ -67,6 +83,7 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 45%;
+  align-content: flex-start;
   max-height: calc(100vh - 200px);
   overflow-y: auto;
 }
